test/negative/async_preview_removed/Main.hx
class Main {
	static function main():Void {
		Sys.println("async-define-check");
	}
}
